Added change pen color and infinite scroll

--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -85,4 +85,5 @@ AskWith = askwith
 # Strings seen by user
 #
 History = History
+TurtleMenu = Change Turtle Image
 ActiveVariables = Active Variables
