Added language menu

--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -86,4 +86,5 @@ AskWith = askwith
 #
 History = History
 TurtleMenu = Change Turtle Image
+LanguageMenu = Change Language
 ActiveVariables = Active Variables
