Perfected changing language (ty Samson for debug)

--- a/src/resources/languages/Chinese.properties
+++ b/src/resources/languages/Chinese.properties
@@ -79,3 +79,8 @@ Turtles = haigui
 Tell = gaosu
 Ask = mingling
 AskWith = tiaojianmingling
+
+History = History
+TurtleMenu = Change Turtle Image
+LanguageMenu = gaibian yuyian
+ActiveVariables = Active Variables
