added define to language

--- a/src/resources/languages/German.properties
+++ b/src/resources/languages/German.properties
@@ -59,6 +59,7 @@ For = für|f
 If = wenn
 IfElse = wennsonst|ws
 MakeUserInstruction = zu
+Define = definieren
 #
 # Display Commands (Befehle Anzeigen)
 #
