--- a/src/resources/languages/Portuguese.properties
+++ b/src/resources/languages/Portuguese.properties
@@ -59,6 +59,7 @@ For = por
 If = se
 IfElse = seoutro
 MakeUserInstruction = para
+Define = definir
 #
 # Display Commands (Comandos Visualizações)
 #
