--- a/src/resources/languages/Russian.properties
+++ b/src/resources/languages/Russian.properties
@@ -59,6 +59,7 @@ For = dlya
 If = yesli
 IfElse = yesliyeshche
 MakeUserInstruction = sdelatinstruktsiya|sdei
+Define = onpeaenrtb
 #
 # Display Commands
 #
