--- a/src/resources/languages/Spanish.properties
+++ b/src/resources/languages/Spanish.properties
@@ -59,6 +59,7 @@ For = para
 If = si
 IfElse = siotro
 MakeUserInstruction = a
+Define = definir
 #
 # Display Commands (Comandos Visualizaciones)
 #
