--- a/src/resources/languages/Chinese.properties
+++ b/src/resources/languages/Chinese.properties
@@ -59,6 +59,7 @@ For = dang
 If = ruguo
 IfElse = qitaruguo
 MakeUserInstruction = zidingyi
+Define = dingyi
 #
 # Display Commands (Xianshi Mingling)
 #
